Lab04/shell.txt
>>> Autor.objects.all()<QuerySet [<Autor: Ana Casas>]>
>>> primer=Autor.objects.get(pk=1)
>>> print(primer)
Ana Casas>>> primer.email
'ana.casas@tecsup.edu.pe'
>>> r1=Receta.objects.create(
... titulo='Huevo Frito',
... ingredientes='Huevo,sal,aceite',... preparacion='calentar la sarten y poner el huevo con una pisca de sal',
... autor=primer... autor=primer)
  File "<console>", line 6    autor=primer)
        ^
SyntaxError: invalid syntax
>>> Receta.objects.all()
<QuerySet []>>>> c1=Comentario.objects.create(
... receta=r1,
... texto='Un clasico para el desayuno') 
Traceback (most recent call last):
  File "<console>", line 2, in <module>
NameError: name 'r1' is not defined
>>> Comentario.objects.all()
<QuerySet []>
>>> r2=Receta.objects.create(
... titulo='Agua Hervida'
... ingredientes='agua',
  File "<console>", line 3
    ingredientes='agua',               ^
SyntaxError: invalid syntax
>>>  r2=Receta.objects.create(
  File "<console>", line 1
    r2=Receta.objects.create(
    ^
IndentationError: unexpected indent
>>> r2 = Receta.objects.create8
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Manager' object has no attribute 'create8'
>>> r2 = Receta.objets.create8
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: type object 'Receta' has no attribute 'objets'
>>> r2 = Receta.objets.create(  
... titulo='Agua Hervida',
... ingredientes='agua',
... preparacion='Poner la tetera en el bla bla bla',
... autor=primer
... autor=primer)  
  File "<console>", line 6
    autor=primer)
        ^
SyntaxError: invalid syntax
>>> autor=primer)  
  File "<console>", line 1
    autor=primer)
                ^
SyntaxError: invalid syntax
>>> r2 = Receta.objets.create( 
... titulo='Agua Hervida',
... ingredientes='agua',
... preparacion='Poner la tetera en el bla bla bla',
... autor=primer)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: type object 'Receta' has no attribute 'objets'
>>> Receta.objects.all()
<QuerySet []>
>>> Receta.objects.exclude(ingredientes__startswith='A') 
<QuerySet []>
>>> Receta.objects.filter(preparacion__contains='tetera')
<QuerySet []>
>>> Receta.objects.all().order_by('titulo')
<QuerySet []>
>>> Receta.objects.all().order_by('titulo').rever
se()
<QuerySet []>
>>> Comentario.objects.filter(receta=r2)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'r2' is not defined
>>> Comentario.objects.filter(receta=r1) 
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'r1' is not defined
>>> Receta.objects.filter(titulo='Huevo frito').update(titulo='Huevito frito')
0
>>> Receta.objects.all()
<QuerySet []>
>>> c2 = Comentario.objects.create8
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Manager' object has no attribute 'create8'
>>> c2 = Comentario.objects.create(
... receta=r1,
... texto='Para pasar el hambre')
Traceback (most recent call last):
  File "<console>", line 2, in <module>
NameError: name 'r1' is not defined
>>> Comentario.objects.filter(receta=r1).count()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'r1' is not defined
>>> Comentario.objects.filter(receta=r2).count() Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'r2' is not defined
>>> c3=Comentario.objects.create8
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Manager' object has no attribute 'create8'
>>> c3=Comentario.objects.create(
... receta=r2,
... texto='Receta sin sentido')
Traceback (most recent call last):
  File "<console>", line 2, in <module>
NameError: name 'r2' is not defined
>>> Comentario.objects.filter(receta=r2)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'r2' is not defined
>>> c3.delete()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'c3' is not defined
>>> Comentario.objects.filter(receta=r2)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'r2' is not defined
>>> Receta.objects.get(titulo='Agua Hervida').aut
or.nombre
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "E:\Python\TECSUP-DAE-2021-2\venv\lib\site-packages\django\db\models\manager.py", line 85, in manager_method
    return getattr(self.get_queryset(), name)(*args, **kwargs)
  File "E:\Python\TECSUP-DAE-2021-2\venv\lib\site-packages\django\db\models\query.py", line 437, in get
    self.model._meta.object_name
recetas.models.Receta.DoesNotExist: Receta matching query does not exist.
>>> Receta.objects.get(titulo='Agua Hervida').aut
or.email
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "E:\Python\TECSUP-DAE-2021-2\venv\lib\site-packages\django\db\models\manager.py", line 85, in manager_method
    return getattr(self.get_queryset(), name)(*args, **kwargs)
  File "E:\Python\TECSUP-DAE-2021-2\venv\lib\site-packages\django\db\models\query.py", line 437, in get
    self.model._meta.object_name
recetas.models.Receta.DoesNotExist: Receta matching query does not exist.